--- a/app/css/main.css
+++ b/app/css/main.css
@@ -5,7 +5,7 @@ body {
   font-size: 17px;
   line-height: 20px;
   color: #000000;
-  font-family: 'OpenSans', sans-serif;
+  font-family: "OpenSans", sans-serif;
   background-color: #ffffff;
 }
 img {
