--- a/app/css/main.css
+++ b/app/css/main.css
@@ -85,8 +85,9 @@ body {
   list-style: none;
 }
 .site-list a {
-  width: 100%;
+  position: relative;
   display: block;
+  padding: 32px 77px;
   font-size: 17px;
   line-height: 24px;
   font-family: 'OpenSans', sans-serif;
@@ -94,18 +95,10 @@ body {
   text-decoration: none;
   color: black;
   white-space: nowrap;
-  padding: 32px 70px;
-  border-top: 1px solid #ececec;
-  list-style: none;
-}
-.site-list a:last-of-type {
   border-bottom: 1px solid #ececec;
 }
-/*.site-list__item_icon{
-    position: relative;
-    top: -22px;
-    right: 35px;
-}*/
-.site-list li {
-  max-height: 79px;
+.site-list__item_icon {
+  position: absolute;
+  top: 35px;
+  left: 30px;
 }
