--- a/app/less/main.less
+++ b/app/less/main.less
@@ -116,8 +116,11 @@ html,body{
 }
 
 .site-list a{
-    width: 100%;
+    position: relative;
+
     display: block;
+    padding: 32px 77px;
+
     font-size: 17px;
     line-height: 24px;
     font-family: 'OpenSans', sans-serif;
@@ -125,23 +128,17 @@ html,body{
     text-decoration: none;
     color: black;
     white-space: nowrap;
-    padding: 32px 70px;
-    border-top: 1px solid #ececec;
-    list-style: none;
-}
 
-
-
-.site-list a:last-of-type{
     border-bottom: 1px solid #ececec;
 }
 
-/*.site-list__item_icon{
-    position: relative;
-    top: -22px;
-    right: 35px;
-}*/
 
-.site-list li{
-    max-height: 79px;
+
+
+
+.site-list__item_icon{
+    position: absolute;
+    top: 35px;
+    left: 30px;
 }
+
