--- a/app/css/main.css
+++ b/app/css/main.css
@@ -16,7 +16,8 @@ body {
   font-family: 'OpenSans', sans-serif;
   color: #000000;
 }
-.page-header {
+.page-header,
+.page-main {
   display: flex;
   flex-direction: column;
 }
@@ -97,8 +98,18 @@ body {
   white-space: nowrap;
   border-bottom: 1px solid #ececec;
 }
+.site-list__item:first-of-type a {
+  border-top: 1px solid #ececec;
+}
 .site-list__item_icon {
   position: absolute;
   top: 35px;
   left: 30px;
+}
+.page-main__title-wrapper {
+  width: 320px;
+  margin: 0 auto;
+  height: 283px;
+  background-image: url('/img/hero-mobile.png');
+  background-repeat: no-repeat;
 }
