--- a/app/less/main.less
+++ b/app/less/main.less
@@ -1,48 +1,54 @@
-@font-face{
-    font-family: 'OpenSans';
-    src: url('opensanslight.woff') format('woff'),
-         url('opensanslight.woff2') format('woff2');
+@font-face {
+  font-family: "OpenSans";
+  src: url("opensanslight.woff") format("woff"),
+    url("opensanslight.woff2") format("woff2");
 }
 
-@font-face{
-    font-family: 'OpenSans-2';
-    src: url('opensans.woff') format('woff'),
-         url('opensans.woff2') format('woff2');
+@font-face {
+  font-family: "OpenSans-2";
+  src: url("opensans.woff") format("woff"),
+    url("opensans.woff2") format("woff2");
 }
 
-html,body{
-    min-width: 320px;
-    margin: 0;
-    padding: 0;
+html,
+body {
+  min-width: 320px;
+  margin: 0;
+  padding: 0;
 
-    font-size: 17px;
-    line-height: 24px;
-    font-family: 'OpenSans', sans-serif;
-    color: #000000;
+  font-size: 17px;
+  line-height: 24px;
+  font-family: "OpenSans", sans-serif;
+  color: #000000;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 .page-header,
-.page-main{
-    display: flex;
-    flex-direction: column;
+.page-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.page-header__logo{
-    text-align: center;
-    width: 320px;
-    height: 79px;
+.page-header__logo {
+  display: block;
+  text-align: center;
+  margin: 22px 0;
 
-    padding-top: 22px;
+  img {
+    display: block;
+  }
 }
 
-
-.main-nav{
-    position: relative;
-    top: -30px;
-    right: 35px;
-
-    width: 320px;
-    margin: 0 auto;
+.main-nav {
+  position: relative;
+  width: 100%;
+  max-width: 320px;
+  margin: 0 auto;
 }
 
 .page-header__logo,
@@ -50,109 +56,102 @@ html,body{
 .categories,
 .product__specifications,
 .product-wrapper,
-.button
-{
-    width: 100%;
-    max-width: 320px;
-    margin: 0 auto;
-    text-align: center;
+.button {
+  //   width: 100%;
+  //   max-width: 320px;
+  //   margin: 0 auto;
+  text-align: center;
 }
 
+.visually-hidden:not(:focus):not(:active) {
+  position: absolute;
 
-.visually-hidden:not(:focus):not(:active){
-    position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
 
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    padding: 0;
+  white-space: nowrap;
 
-    white-space: nowrap;
-
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
+.main-nav__toggle {
+  position: absolute;
+  top: -105px;
+  right: 40px;
+  z-index: 2;
 
-.main-nav__toggle{
-    position: absolute;
-    top: -105px;
-    right: 40px;
-    z-index: 2;
+  display: block;
+  width: 23px;
+  height: 23px;
 
-    display: block;
-    width: 23px;
-    height: 23px;
+  //background-image: url('/img/menu-close.png');//
+  background-color: white;
+  border: none;
+  background-repeat: no-repeat;
 
-    //background-image: url('/img/menu-close.png');//
-    background-color: white;
-    border: none;
-    background-repeat: no-repeat;
+  cursor: pointer;
 
-    cursor: pointer;
-
-    &:hover,
-    &:active{
-        background-color: rgb(148, 110, 110) ;
-    }
+  &:hover,
+  &:active {
+    background-color: rgb(148, 110, 110);
+  }
 }
 
+.main-nav__closed .main-nav__toggle::before {
+  content: "";
 
-.main-nav__closed .main-nav__toggle::before{
-    content: '';
+  position: absolute;
 
-    position: absolute;
+  width: 20px;
+  height: 2px;
 
-    width: 20px;
-    height: 2px;
-
-    background-color: #000000;
-    box-shadow: 0 6px 0 0 #000000, 0 12px 0 0 #000000;
+  background-color: #000000;
+  box-shadow: 0 6px 0 0 #000000, 0 12px 0 0 #000000;
 }
 
-.site-list{
-    width: 100%;
-    list-style: none;
+.site-list {
+  width: 100%;
+  list-style: none;
 }
 
-.site-list a{
-    position: relative;
+.site-list a {
+  position: relative;
 
-    display: block;
-    padding: 32px 77px;
+  display: block;
+  padding: 32px 77px;
 
-    font-size: 17px;
-    line-height: 24px;
-    font-family: 'OpenSans', sans-serif;
-    font-weight: bold;
-    text-decoration: none;
-    color: black;
-    white-space: nowrap;
+  font-size: 17px;
+  line-height: 24px;
+  font-family: "OpenSans", sans-serif;
+  font-weight: bold;
+  text-decoration: none;
+  color: black;
+  white-space: nowrap;
 
-    border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
 }
 
-
-.site-list__item:first-of-type a{
-    border-top: 1px solid #ececec;
+.site-list__item:first-of-type a {
+  border-top: 1px solid #ececec;
 }
 
-
-.site-list__item_icon{
-    position: absolute;
-    top: 35px;
-    left: 30px;
+.site-list__item_icon {
+  position: absolute;
+  top: 35px;
+  left: 30px;
 }
 
+.page-main__title-wrapper {
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  margin: 0 auto;
 
-
-.page-main__title-wrapper{
-    width: 320px;
-    margin: 0 auto;
-
-    height: 283px;
-    background-image: url('/img/hero-mobile.png');
-    background-repeat: no-repeat;
+  height: 283px;
+  background-image: url("/img/hero-mobile.png");
+  background-repeat: no-repeat;
 }
-
