--- a/app/less/main.less
+++ b/app/less/main.less
@@ -148,7 +148,8 @@ html,body{
 
 
 .page-main__title-wrapper{
-    width: 320px;
+    width: 100%;
+    max-width: 320px;
     margin: 0 auto;
 
     height: 283px;
