--- a/app/css/main.css
+++ b/app/css/main.css
@@ -107,7 +107,8 @@ body {
   left: 30px;
 }
 .page-main__title-wrapper {
-  width: 320px;
+  width: 100%;
+  max-width: 320px;
   margin: 0 auto;
   height: 283px;
   background-image: url('/img/hero-mobile.png');
